2004-12-29  Francois Dumont  <dums@stlport...>

	* stlport/stl/_hashtable.c: Fix missing allocator argument in new slist
	construction and band number of buckets thanks See Wong report.
	
	* test/unit/unordered_test.cpp: Add of a test to report the previous
	problem.

	* build/Makefiles/nmake/vc-common.mak, evc-common.mak: Generalization of the 
	/DMACRO compiler command rather than /D "MACRO".

	* test/unit/string_test.cpp: Creation of a new test case for string template
	expression.

	* stlport/stl/_string_sum.h, _string_sum_methods.h: Fixing of many bugs in the
	string template expressions implementation.
	
	* stlport/stl/_tree.c: Add of a comment in the _M_increment method explaining
	a surprising checks thanks Ulrich Eckhardt.

2004-12-24  Petr Ovtchenkov  <ptr@island...>

	* build/Makefiles: makesystem moved here from src/Makefiles

	* build/lib: makefiles moved here from src catalog.

	* build/test/unit: makefiles moved here from test/unit catalog.

	* INSTALL: updated.

	* README: updated.

2004-12-23  Francois Dumont  <dums@stlport...>

	* stlport/stl/_vector.h, _vector.c: Fix of the code for movable types
	in call to push_back or insert of a value in case of auto referencing
	thanks Benjamin Redelings.
	
	* stlport/stl/_hashtable.c: Fix of the _M_copy method thanks Timothy
	Tenebekov.
	
2004-12-22  Francois Dumont  <dums@stlport...>

	* stlport/stl/debug/_string.h: Fix of missing scopes thanks arabesc and
	Benjamin Redelings
	
	*stlport/config/stl_gcc.h: include schema fix for gcc >= 4.0.0 thanks 
	Oliver Stoeneberg
	
2004-12-21  Francois Dumont  <dums@stlport...>

	* stlport/stl/_hashtable.c: Fix copy method thanks KL report.
	
	* stlport/stl/_vector.h, _deque.h: Fix implementation for vector of 
	movable objects when calling erase of a null range thanks to arabesc report.
	
	* stlport/stl/_string.h, _string_workaround.h, debug/_string.h, 
	  debug/_string_workaround.h: Implementation of the MSVC6 template method bug